BaSP-W07-2023: correct the scrollbar

--- a/week-07/css/common.css
+++ b/week-07/css/common.css
@@ -1,3 +1,6 @@
+::-webkit-scrollbar {
+  display: none;
+}
 h1{
     color: rgba(55, 56, 103,1);
     width: 300px;
